Fix: alignment and sizings for within CloudCannon

--- a/components/sections/one-column/one-column.scss
+++ b/components/sections/one-column/one-column.scss
@@ -1,5 +1,6 @@
 .c-one-column {
     display: flex;
+    width: 100%;
 
     &.--small {
         max-width: 580px;
